syntax = "proto2";
package colony.graphics.proto;

message Point {
  optional int32 x = 1;
  optional int32 y = 2;
}

message AreaGraphics {
  optional Point coord = 1;
  optional uint64 area_id = 2;
}

message WorldGraphics {
  repeated AreaGraphics areas = 1;
}
